# instagram-comment-slots

./: .gitignore  cli.py  pyproject.toml  readme.rst  run.py  start.py
lib/: app.py  instagram.py  views.py
lib/templates/: index.html
